--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -37,5 +37,8 @@
 	<servlet-mapping>
 		<servlet-name>DispatcherServlet</servlet-name>
 		<url-pattern>/</url-pattern>
-	</servlet-mapping>	  
+	</servlet-mapping>
+	<welcome-file-list> 
+	  <welcome-file>views/login.jsp</welcome-file> 
+	</welcome-file-list>		  
 </web-app>
