--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,13 @@
 		<artifactId>servlet-api</artifactId>
 		<version>3.0-alpha-1</version>
 	</dependency>
+	
+	<dependency>
+	       <groupId>org.hibernate</groupId>
+	       <artifactId>hibernate-validator</artifactId>
+	       <version>4.2.0.Final</version>
+	</dependency>
+		
   </dependencies>
   <build>
     <finalName>spring-forum</finalName>
