--- a/pom.xml
+++ b/pom.xml
@@ -9,8 +9,8 @@
   <url>http://maven.apache.org</url>
   
 	<properties>
-		<spring.versao>3.1.2.RELEASE</spring.versao>
-		<tiles.versao>2.2.2</tiles.versao>
+		<spring.versao>4.0.2.RELEASE</spring.versao>
+		<tiles.versao>3.0.3</tiles.versao>
 		<spring.security.versao>3.1.3.RELEASE</spring.security.versao>
 	</properties>
 
@@ -75,7 +75,12 @@
 		<groupId>commons-io</groupId>
 		<artifactId>commons-io</artifactId>
 		<version>2.1</version>
-	</dependency>		
+	</dependency>
+	<dependency>
+		<groupId>org.slf4j</groupId>
+		<artifactId>slf4j-log4j12</artifactId>
+		<version>1.7.21</version>
+	</dependency>
   </dependencies>
   <build>
     <finalName>spring-forum</finalName>
