--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -40,6 +40,6 @@
 	</servlet-mapping>
 
 	<welcome-file-list> 
-	  <welcome-file>views/login.jsp</welcome-file> 
+	  <welcome-file>/WEB-INF/views/login.jsp</welcome-file> 
 	</welcome-file-list>		  
 </web-app>
