--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -19,6 +19,7 @@
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
 		<param-value>
+			/WEB-INF/spring/spring-data.xml
 			/WEB-INF/spring/spring-servlet.xml
 		</param-value>
 	</context-param> 
