--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
 		<spring.versao>4.0.2.RELEASE</spring.versao>
 		<tiles.versao>3.0.3</tiles.versao>
 		<spring.security.versao>3.1.3.RELEASE</spring.security.versao>
+		<jackson.versao>2.6.3</jackson.versao>		
 	</properties>
 
   <dependencies>
@@ -108,9 +109,15 @@
 		<groupId>org.hibernate</groupId>
 		<artifactId>hibernate-core</artifactId>
 		<version>4.1.7.Final</version>
-	</dependency>  
+	</dependency>
+
+	<dependency>
+		<groupId>org.codehaus.jackson</groupId>
+		<artifactId>jackson-mapper-asl</artifactId>
+		<version>1.7.1</version>
+	</dependency>
   </dependencies>
-  
+
   <build>
     <finalName>spring-forum</finalName>
   </build>
